Requests name projects; register is its own request; kinds, mains and links refuse precisely
- A message is empty (show the window), a path (register it), or a verb, a project name
  and an optional third line; `register <path>` registers a folder, then selects it.
  select, run, compile, check, terminate, clean, kind, forget, mains, link and clear
  take the project name, and an unknown name is refused listing the projects.
- run and compile of a project that is not code are refused naming its kind; check
  applies to any project. A code project with broken links neither compiles nor runs.
- A successful compile drops the selected mains that are no longer mains; a run whose
  selected mains are not all mains is refused, and drops them.
- edits imply reads: a data project can be in both, with different type names; a link
  names at least one type. A link request sets reads or edits alone; no names removes it.
- kind is required in projects.info; at start a project whose kind is missing or unknown
  becomes idle, its compiled cache is deleted, and a note says so.
- The periodic check of the projects runs only while the window is shown.
- Connect Eclipse accepts the program, its folder, or the folder Eclipse was unzipped into.
- The plugin sends project names, shows the consoles and runs every fifth of a second in a
  job of its own, and leaves the workspace work to the two second job.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_017Wumue2WFysEPEw49DXtoy